# skillflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILLFLOW_GIT_CHECKLIST.sh  docker-compose.yml  normal.env  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/applications/: applications.controller.ts  applications.module.ts  applications.service.ts
backend/src/audit/: audit.module.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts  sep10.service.ts
backend/src/disputes/: disputes.controller.ts  disputes.module.ts  disputes.service.ts
backend/src/ipfs/: ipfs.service.ts
backend/src/jobs/: jobs.controller.ts  jobs.module.ts  jobs.service.ts
backend/src/milestones/: milestones.controller.ts  milestones.module.ts  milestones.service.ts
backend/src/notifications/: notifications.service.ts
backend/src/stellar/: stellar.service.ts
backend/src/tokens/: tokens.module.ts  tokens.service.ts
backend/src/users/: users.controller.ts  users.service.ts
contracts/: Cargo.toml
contracts/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  types.rs
docs/: ARCHITECTURE.md  MAINTAINER_GUIDE.md
frontend/: .env.local.example  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: sep10.ts  sep7.ts
(+25 files in other folders)
